deploy/components/super-productivity/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: super-productivity
  namespace: super-productivity # Added this
spec:
  replicas: 1
  selector:
    matchLabels:
      app: super-productivity
  template:
    metadata:
      labels:
        app: super-productivity
    spec:
      containers:
      - name: super-productivity
        image: johannesjo/super-productivity:latest
        ports:
        - containerPort: 80
