deploy/components/super-productivity/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: super-productivity-svc
  namespace: super-productivity # Added for consistency
spec:
  selector:
    app: super-productivity
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
