deploy/components/super-productivity/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: super-productivity-ingress
  namespace: super-productivity # Replace with the actual namespace used by that app
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: super-productivity.nibblesnbits.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: super-productivity-svc # Replace with the actual name of your service
            port:
              number: 80 # Replace with your service's port
